panda-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: panda-dev-rest1
  labels:
    helm.sh/chart: rest-0.1.0
    app.kubernetes.io/name: rest
    app.kubernetes.io/instance: panda-dev
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "10"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header X-IDDS-Auth-Type $http_x_panda_auth_type;
      proxy_set_header X-IDDS-Auth-VO $http_x_panda_auth_vo;
      proxy_set_header X-IDDS-Auth-Token $http_x_panda_auth_token;
      proxy_set_header X-IDDS-Auth-Username-Original $http_x_panda_auth_username_original;
      proxy_set_header X-IDDS-Auth-Usercert-Original $http_x_panda_auth_usercert_original;
      proxy_set_header X-IDDS-Auth-Userdn-Original $http_x_panda_auth_userdn_original;
    
      proxy_set_header SSL-CLIENT-CERT $ssl_client_escaped_cert;
      proxy_set_header SSL-CLIENT-S-DN  $ssl_client_s_dn;
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      ssl on;
      ssl_verify_client optional_no_ca;
      ssl_verify_depth 10;
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "panda-dev-rest1.cern.ch"
      secretName: panda-dev-main-tls-cert
  rules:
    - host: "panda-dev-rest1.cern.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: panda-dev-server
                port:
                  number: 443
